# continue

./: .gitignore  README.md  abc.txt  ask.py  better.py  breakpoint.py  code_to_test.py  completions.json  completions_prepared.jsonl  data_tools.py  debug.py  docstring_completions.json  ds_gen.py  fast.py  fault_loc.py  fine-tune.sh  fuzz.py  llm.py  models.py  naive.py  package-lock.json  parse.py  prompts.py  pytest_files.json  pytest_files_prepared.jsonl  pytest_parse.py  quix.py  rectangle.py  repl.py  requirements.txt  server.py  simple.py  small_utils.py  stack.py  stack_chunked.py  telemetry.md  test_gen.py  tune.py  universal.py  virtual_filesystem.py  (+2 more)
continue/: README.md  pyproject.toml
continue/schema/json/: AddFile.json  FileSystemEdit.json  Range.json
continue/src/: continue.py  main.py
continue/src/libs/: actions.py  agent.py  agents.py  core.py  history.py  ide.py  main.py  observation.py  policy.py  traceback_parsers.py
continue/src/models/: agent.py  filesystem.py  filesystem_edit.py  hook.py  main.py  resource_policy.py
continue/src/plugins/: __init__.py  load.py
continue/src/scripts/: gen_json_schema.py
continue/src/server/: ide.py  ide_protocol.py  main.py  notebook.py
continuedev/: README.md  pyproject.toml
continuedev/schema/json/: Action.json  AddDirectory.json  DeleteDirectory.json  DeleteFile.json  EditDiff.json  FileEdit.json  History.json  HistoryState.json  Position.json  RangeInFile.json  RenameDirectory.json  RenameFile.json  (+2 more)
continuedev/src/: continuedev.py
extension/scripts/: .gitignore  build_call_graph.py  chroma.py  continuedev-0.1.0-py2.py3-none-any.whl  continuedev-0.1.0-py3-none-any.whl  index.py  pyproject.toml  requirements.txt  run_continue_server.py  run_unit_test.py  typegen.js
package/: README.md  debug.py  ds_gen.py  fault_loc_utils.py  main.py  pyproject.toml  quix.py  requirements.txt  server.py  test_gen.py  util.py
package/benchmark/: bugswarm.py  quix.py
package/fault_loc/: dyn_call_graph.py  main.py  static_call_graph.py  utils.py
package/libs/: models.py  util.py  virtual_filesystem.py
package/server/: README.md  ask.py  chat.py  debug.py  dependencies.py  docs.py  ds_gen.py  main.py  openapi_gen.py  run.sh  telemetry.py  test_gen.py  utils.py
package/test/: test_fault_loc.py
package/tools_context/: github.py  refresh.py  slack.py  tools.py
(+438 files in other folders)
