[tool.poetry]
name = "continue"
version = "0.1.0"
description = ""
authors = ["Nate Sesti <sestinj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.7.0"
pydantic = "^1.10.7"
pathspec = "^0.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
