[tool.poetry]
name = "continuedev"
version = "0.1.0"
description = ""
authors = ["Nate Sesti <sestinj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
typer = "^0.7.0"
pydantic = "^1.10.7"
pathspec = "^0.11.1"
python-dotenv = "^1.0.0"
fastapi = "^0.95.0"
pluggy = "^1.0.0"
boltons = "^23.0.0"
openai = "^0.27.4"
uvicorn = "^0.21.1"
websockets = "^11.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
