[tool.poetry]
name = "package"
version = "0.1.0"
description = ""
authors = ["Nate Sesti <sestinj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tokenizers = "^0.13.2"
transformers = "^4.26.1"
uvicorn = "^0.20.0"
fastapi = "^0.92.0"
boltons = "^21.0.0"
openai = "^0.26.5"
python-dotenv = "^0.21.1"
gpt-index = "0.3.2"
pathspec = "^0.11.0"
docstring-parser = "^0.15"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
