[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Nate Sesti <sestinj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "8.1.3"
pathspec = "0.11.0"
typer = "0.7.0"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
